# EFREI-Graph-Metro-Network

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
algorithms/: __init__.py  bellman_ford.py  bfs.py  dfs.py  dijkstra.py  floyd_warshall.py  graph_network.py  kruskal.py  prim.py  utils.py  visualize_metro.py
data/: metro_network.csv  metro_network.json  metro_network.npy  metro_network.txt  metro_network_bellman.npy  metro_network_bellman.txt
interface/: __init__.py  app.py  gui.py
interface/templates/: index.html  steps.html
results/: REFERENCE_GRAPHE_VERIFICATION.txt
results/BELLMAN_FORD/: bellman_ford_result.txt
results/BFS/: bfs_result.txt
results/DFS/: dfs_result.txt
results/DIJKSTRA/: dijkstra_result.txt
results/FLOYD_WARSHALL/: floyd_warshall_matrix.txt  floyd_warshall_result.txt
results/KRUSKAL/: kruskal_result.txt
results/PRIM/: prim_result.txt
scripts/: draw_pert_network.py
