[project]
name = "projet-graph"
version = "0.1.0"
description = "Réseau métro - algorithmes de graphes (BFS, DFS, Prim, Kruskal, Dijkstra, Bellman-Ford)"
readme = "README.md"
requires-python = ">=3.7"

[tool.ruff]
target-version = "py37"
line-length = 100
exclude = ["__pycache__", ".venv", "venv", "results"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["algorithms", "interface"]

[tool.ruff.format]
quote-style = "double"
